# Splotch

./: .gitignore  CMakeLists.txt  MainAllInOne.cpp  MainClient.cpp  MainServer.cpp  MainSplitScreen.cpp  README.md  vcpkg.json
client/include/: Application.h  AssetManager.h  ClientGameData.h  Event.h  Game.h  GameData.h  GameManager.h  NetworkClientManager.h  Player.h  PlayerDrawable.h  RollbackManager.h
client/include/Gui/: Gui.h
client/include/Gui/Guis/: GameGui.h  LobbyGui.h  MenuGui.h
client/include/Renderer/: Button.h  Renderer.h  Text.h
client/include/Renderer/Renderers/: GameRenderer.h  LobbyRenderer.h  MenuRenderer.h
client/src/: Application.cpp  AssetManager.cpp  ClientGameData.cpp  Game.cpp  GameManager.cpp  NetworkClientManager.cpp  Player.cpp  PlayerDrawable.cpp  RollbackManager.cpp
client/src/Gui/: Button.cpp  Gui.cpp  Text.cpp
client/src/Gui/Guis/: GameGui.cpp  LobbyGui.cpp  MenuGui.cpp
client/src/Renderer/: Button.cpp  Renderer.cpp  Text.cpp
client/src/Renderer/Renderers/: GameRenderer.cpp  LobbyRenderer.cpp  MenuRenderer.cpp
common/include/: Checksum.h  Constants.h  GameData.h  Logger.h  MyPackets.h  PlayerDrawable.h  PlayerInputs.h
common/include/MyPackets/: ConfirmationInputPacket.h  JoinLobbyPacket.h  LeaveGamePacket.h  LeaveLobbyPacket.h  PlayerInputPacket.h  StartGamePacket.h  SwitchRolePacket.h
common/src/: GameData.cpp  MyPackets.cpp
libs/Math/: Angle.h  Definition.h  Shape.h  Vec2.h
libs/Physics/include/: Body.h  BodyType.h  Collider.h  ColliderPair.h  ContactListener.h  ContactResolver.h  Exception.h  QuadTree.h  Ref.h  World.h
libs/Physics/src/: Body.cpp  Collider.cpp  ContactResolver.cpp  QuadTree.cpp  World.cpp
libs/Physics/tests/: TestBody.cpp  TestCollider.cpp  TestQuadTree.cpp  TestWorld.cpp
libs/PhysicsCommon/include/: Allocator.h  SharedPtr.h  Timer.h  UniquePtr.h
libs/PhysicsCommon/src/: Allocator.cpp  Timer.cpp
network/client/include/: ClientNetworkInterface.h
network/common/include/: Packet.h  PacketManager.h  Protocol.h
network/common/src/: Packet.cpp  PacketManager.cpp
network/server/include/: ClientId.h  ServerNetworkInterface.h
server/include/: GameServer.h  NetworkServerManager.h  ServerData.h  ServerGameData.h
server/src/: GameServer.cpp  NetworkServerManager.cpp  ServerData.cpp  ServerGameData.cpp
